@startuml
left to right direction
class ControlPoint {
    * Long: id
    + String: name
    + Double: latitudeCoordinate
    + Double: longitudeCoordinate
    ~ Route: route
}

class Route {
    * Long: id
    + String: name
    + Double: length
}

class Hike {
    * Long: id
    + Date: dateOfJourney
    - List<Hiker>: groupOfHikers
<<<<<<< HEAD
    - Route: route
    - Hiker: hiker
=======
    ~ Route: route
    ~ Hiker: hiker
>>>>>>> main
}

class Hiker {
    * Long: id
    + String: firstName
    + String: lastName
}

class Image {
    * Long: id
    + String: fileName
    + byte[]: imageData
    ~ ControlPoint: controlPoint
    ~ Hike: hike
}

Image "*" --> "1" ControlPoint

ControlPoint "*" --> "1" Route

Route "*" - "*" Hiker
(Route, Hiker) .. Hike


Hike "1" <-- "*" Image
@enduml
